Remove text wrap from read page to address heroku rendering issue

--- a/src/components/ReadText/ReadText.css
+++ b/src/components/ReadText/ReadText.css
@@ -37,7 +37,7 @@
   font-size: 2.5vmin;
   text-align: left;
   white-space: pre;
-  text-wrap: wrap;
+  /* text-wrap: wrap; */
 }
 
 .simplified-text {
